tests/ui/pattern/issue-66270-pat-struct-parser-recovery.stderr
error: expected type, found `0`
  --> $DIR/issue-66270-pat-struct-parser-recovery.rs:4:22
   |
LL | struct Bug {
   |        --- while parsing this struct
LL |     incorrect_field: 0,
   |                      ^ expected type

error[E0026]: struct `Bug` does not have a field named `any_field`
  --> $DIR/issue-66270-pat-struct-parser-recovery.rs:12:9
   |
LL |         any_field: Empty {},
   |         ^^^^^^^^^ struct `Bug` does not have this field

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0026`.
